# superfaiss

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  build.bat
.github/workflows/: coherence-checks.yml  tests.yml
docs/: API.md  DETERMINISM.md  FORMAT.md  INTEGRATION.md
include/superfaiss/: alloc.h  analytics.h  bake.h  graph.h  inspector_common.h  kernels.h  matching.h  novelty.h  query.h  scratch.h  superfaiss.h  types.h  validate.h  version.h
src/: analytics.cpp  graph.cpp  kernels.cpp  kernels_avx2.cpp  matching.cpp  novelty.cpp  query.cpp  scratch.cpp  validate.cpp
tests/: bench_main.cpp  demo_main.cpp  test_main.cpp  xd_fixtures.h
tools/: gen_xd_fixtures.py  glove_to_wvbank.cpp  wvbank.py
